Add search user profiles functionality using username/name
